--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
 * {
   box-sizing: border-box;
   text-decoration: none;
-  color: black;
+  color: #383F51;
   font-family: "Inter", sans-serif;
 }
 
@@ -10,19 +10,4 @@ body {
   background: ghostwhite;
   margin: 0;
   padding: 0;
-  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-	background-size: 400% 400%;
-	animation: gradient 15s ease infinite;
-}
-
-@keyframes gradient {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-  }
 }
